Usuari2: he afegit una secció per modificar atributs HTML amb setAttribute()

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       És la base del projecte que després completarem amb més funcionalitats.</p>
     </section>
   </main>
+    <section id="contingut">
+        <h2>Modificar contingut HTML amb JavaScript</h2>
+        <p id="textExample">Aquest és el text original.</p>
+        <button onclick="canviaText()">Canvia el text</button>
+    </section>
+    <section id="atributs">
+        <h2>Modificar atributs HTML amb JavaScript</h2>
+        <img id="myImage" src="assets/img1.png" alt="Imatge original" width="250">
+        <br>
+        <button onclick="canviaImatge()">Canvia la imatge</button>
+    </section>
+
 
   <footer>
     <p>Autor/a: Érika Guillem · DAW 2n · IES L Estació</p>
