Usuari1: he realitzat millores en la secció de contingut (hotfix v1.0.1)

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     </section>
 
 
-  <footer>
-    <p>Autor/a: Érika Guillem · DAW 2n · IES L Estació</p>
-  </footer>
+ <footer>
+  <p>Autor/a: Érika Guillem · DAW 2n · IES L Estació</p>
+  <p>Versió 1.0.1 - Millores  en la secció de contingut</p>
+</footer>
+
 
   <script src="assets/js/main.js"></script>
 </body>
